# Iconoglott

./: .gitignore  Builderfile  Makefile  README.md  pyproject.toml
.hypothesis/constants/: 12eed9914b6ba935  18b56efc1c8e160c  2bd64f23247dd5e2  41f6281d6b5e8fda  4b1afb3d5cd02de7  5b1de4f898e1484b  76de2bc457f77605  905b3c005328c5d0  999f474fc4bd30e6  a88c1dfd0d3dec01  c9736b030034fe29  ff9e04b6a89c5afb
big_test/: Makefile  README.md
big_test/backend/: pyproject.toml  test_backend.py
big_test/frontend/: index.html  main.ts  package-lock.json  package.json  test.ts  tsconfig.json  vite.config.ts
distribution/npm/: README.md  package.json  tsconfig.json  vitest.config.ts
distribution/pypi/: .gitignore  Makefile  README.md  pyproject.toml
source/: .gitignore  Makefile
source/core/: .gitignore  Cargo.toml  pyproject.toml  wasm-pack.toml
source/core/.cargo/: config.toml
source/core/benches/: rendering.rs
source/core/bindings/: AlignItems.ts  AnimatableProperty.ts  Animation.ts  AnimationState.ts  ArrowType.ts  AstCanvas.ts  AstGraph.ts  AstNode.ts  AstShape.ts  AstStyle.ts  AstSymbol.ts  AstTransform.ts  AstUse.ts  Axis.ts  CanvasSize.ts  Circle.ts  Color.ts  Constraint.ts  Diamond.ts  Dimension.ts  DimensionPair.ts  Direction.ts  Duration.ts  Easing.ts  Edge.ts  EdgeStyle.ts  Element.ts  Ellipse.ts  ErrorKind.ts  ErrorSeverity.ts  FillMode.ts  Filter.ts  FullStyle.ts  GradientDef.ts  GradientShape.ts  GraphContainer.ts  GraphEdge.ts  GraphNode.ts  GraphNodeShape.ts  ImageShape.ts  (+25 more)
source/core/proptest-regressions/dsl/parser/: proptest_tests.txt
source/core/src/: README.md  cache.rs  diff.rs  id.rs  lib.rs  parser.rs  path.rs  render.rs  scene.rs  shape.rs  snapshot_tests.rs  ts_export.rs  wasm.rs
source/core/src/bindings/: mod.rs  wasm.rs
source/core/src/dsl/: lexer.rs  mod.rs  parser.rs
source/core/src/dsl/parser/: anim.rs  ast.rs  core.rs  layout.rs  mod.rs  proptest_tests.rs  python.rs  symbols.rs  tests.rs  wasm.rs
source/core/src/font/: mod.rs
source/core/src/hash/: id.rs  mod.rs
source/core/src/path/: boolean.rs  mod.rs
source/core/src/render/: cache.rs  command.rs  diff.rs  mod.rs  render.rs
source/core/src/scene/: mod.rs  scene.rs  shape.rs
source/core/src/snapshots/: iconoglott_core__snapshot_tests__basic_circle.snap  iconoglott_core__snapshot_tests__basic_ellipse.snap  iconoglott_core__snapshot_tests__basic_line.snap  iconoglott_core__snapshot_tests__basic_polygon.snap  iconoglott_core__snapshot_tests__basic_rect.snap  iconoglott_core__snapshot_tests__basic_text.snap  iconoglott_core__snapshot_tests__canvas_giant.snap  iconoglott_core__snapshot_tests__canvas_nano.snap  iconoglott_core__snapshot_tests__diamond.snap  iconoglott_core__snapshot_tests__empty_canvas.snap  iconoglott_core__snapshot_tests__gradient_rect.snap  iconoglott_core__snapshot_tests__multiple_shapes.snap  iconoglott_core__snapshot_tests__nested_group.snap  iconoglott_core__snapshot_tests__opacity_layers.snap  iconoglott_core__snapshot_tests__path.snap  iconoglott_core__snapshot_tests__radial_gradient.snap  iconoglott_core__snapshot_tests__rotated_rect.snap  iconoglott_core__snapshot_tests__scaled_circle.snap  iconoglott_core__snapshot_tests__shadow_circle.snap  iconoglott_core__snapshot_tests__styled_rect.snap  iconoglott_core__snapshot_tests__symbol_use.snap  iconoglott_core__snapshot_tests__symbol_with_transform.snap  iconoglott_core__snapshot_tests__text_anchors.snap  iconoglott_core__snapshot_tests__text_bold.snap  iconoglott_core__snapshot_tests__translated_shape.snap
(+52 files in other folders)
