[project]
name = "iconoglott"
version = "0.1.0"
description = "Real-time visual DSL with Rust-powered rendering"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=13.1,<14",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/lang", "source/server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["source/tests"]
pythonpath = ["source"]
