[project]
name = "iconoglott-backend-test"
version = "0.1.0"
description = "Integration test for iconoglott Python backend + LangChain"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "pydantic>=2.0.0",
]

[project.scripts]
test-backend = "test_backend:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

