[project]
name = "iconoglott"
version = "0.1.0"
description = "Visual DSL for AI-generated graphics with Rust-powered rendering"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["svg", "dsl", "graphics", "visualization", "ai", "langchain", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Build the Rust core from source/core
manifest-path = "../../source/core/Cargo.toml"
# Include Python package from source/lang as 'iconoglott'
python-source = "python"
# PyO3 extension module
features = ["pyo3/extension-module"]
# Strip debug symbols for smaller wheels
strip = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../../source/tests"]
