[package]
name = "iconoglott-core"
version = "0.1.0"
edition = "2021"
description = "High-performance SVG rendering engine with incremental diffing"

[lib]
name = "iconoglott_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook"]
bench = []  # Enables core modules without PyO3 for benchmarking

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex-lite = "0.1"
lazy_static = "1.4"

# Python bindings (optional)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1.4"
insta = "1.34"
criterion = "0.5"

[[bench]]
name = "rendering"
harness = false

[profile.release]
opt-level = "s"
lto = true
